# productivity-bot

bot/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
bot/.coolify/: README.md  deploy.yml
bot/docs/: BACKUP_RECOVERY.md  SETUP.md  USER_GUIDE.md
bot/migrations/: 001_initial_schema.sql
bot/scripts/: backup.sh  restore.sh  setup_backup_cron.sh  setup_git_sync.sh  setup_google_auth.py
bot/src/: bot.py  calendar_integration.py  calendar_sync.py  checkins.py  config.py  conversation.py  database.py  git_sync.py  llm_client.py  main.py  models.py  nlp.py  notifications.py  obsidian_sync.py  people.py  personality.py  scheduler.py  settings.py  summarization.py  voice.py
bot/tests/: test_bot.py  test_calendar.py  test_calendar_sync.py  test_checkins.py  test_conversation.py  test_database.py  test_git_sync.py  test_integration.py  test_llm_client.py  test_nlp.py  test_notifications.py  test_obsidian_sync.py  test_people.py  test_personality.py  test_scheduler.py  test_settings.py  test_summarization.py  test_voice.py
docs/plans/: 2026-01-31-productivity-system.md
